* November 25, 2007, Kaj de Vos *

Moved essential packages to the new system area, to protect them from regular software
maintenance activities in /usr/. The idea is that regular user actions will not leave
the system unbootable, and a protected system environment will keep allowing basic
operation of the system to repair any damage.

* November 22, 2007, Kristian Van Der Vliet *

Fixed dlopen() so that it correctly returns NULL if the library could not be
opened. I've also done a quick cleanup and removed an unnescary malloc() that
was also a memory leak.

* November 12, 2007, Kaj de Vos *

Introduced an extra symlinked package pool for system resources.

I have thought many years about the desirability of versioned package installations.
It seemed a powerful thing to be able to install multiple versions of a package.
However, it would also complicate our package symlink system quite a bit, because
multiple versions of the same file would be allowed and would have to be managed.
And when it comes down to it, the only parts of a package that are properly versioned
and can be used next to eachother are shared libraries. These are essential, because
we are shipping compatibility versions of older libraries. For using complete packages
in place of another version provided in the system, the method Builder uses by placing
another package pool first in all the search paths has turned out to be convenient.
As a matter of psychology, allowing multiple package versions in the main system could
easily lead users to install too many versions, and developers to link programs to
non-standard library versions that are not available on other people's configurations
(as observed in other systems).

This matter needed a solution now, because Linux is not as flexible with shared libraries
as Syllable. The method we used to move the core C and C++ libraries to /system/libraries/
breaks on Linux, because it does not allow moving the shared system libraries after