@@ -33,3 +33,18 @@ alias ll='ls -l'
 alias dir='ls -l --color'
 alias more=less
 alias m=less
+
+# Early init scripts run before user login and can include environment variables.
+
+for pkg_init in `ls /system/indexes/early-init/`
+do
+	source /system/indexes/early-init/$pkg_init
+done
+
+for pkg_init in `ls /usr/indexes/early-init/`
+do
+	source /usr/indexes/early-init/$pkg_init
+done
+
+# Do early user initialisation
+source /system/user-early-init.sh
